tests/FSharp.Compiler.ComponentTests/Conformance/TypeForwarding/NegativeCases/Struct_NG_TurnToClass.fs
let f = new TurnsToClass()
let rv = f.getValue() 

exit rv
